--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+.experienceWrap{
+	grid-gap: 1.5rem;
+}
+.singleImg{
+	width: 100%;
+	border-radius: 3px;
+	margin-bottom: 7px;
+}
+.cityName{
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+.cityName:hover{
+	color: #4EB8CB;
+}
+.cost{
+	color: #ABABAB;
+	font-size: 13px;
+}
+.star{
+	font-size: 12px;
+	margin-top: 7px;
+}
+.star svg{
+	color: #4EB8CB;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Single Home Result */
+.singleHomeResult{
+	border-bottom: 1px solid #DBDBDB;
+	grid-template-columns: 1fr 2fr;
+	margin-bottom: 1.5rem;
+	padding-bottom: 1.5rem;
+	align-items: center;
+	grid-gap: 2rem;
+}
+.singleHomeResult:last-child{
+	border-bottom: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.singleHomeResult img {
+	width: 100%;
+	border-radius: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.singleHomeResult h5, 
+.singleHomeResult h6, 
+.singleHomeResult p{
+	margin-top: 10px;
+}
+.singleHomeResult .flex{
+	display: flex;
+	justify-content: space-between;
+}
+.singleHomeResult .flex h6 svg{
+	color: #7aef4e;
 }
 
-.App-link {
-  color: #61dafb;
+/* Home Detail */
+.singleHome .topImg{
+	display: flex;
+	align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.singleHome .topImg img{
+	width: 50%;
 }
